DevOps/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mesa-api
  namespace: mesa
  labels:
    app.kubernetes.io/name: member-event-stream-agent
    app.kubernetes.io/component: api
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: member-event-stream-agent
    app.kubernetes.io/component: api
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
